force-app/main/default/objects/BLN_Initiative__c/BLN_Initiative__c.object-meta.xml
<CustomObject>
    <description>FOUK-4789</description>
    <label>Initiative</label>
    <nameField>
        <label>Intiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>