force-app/main/default/objects/BLN_Initiative__c/fields/BLM_Outcome__c.field-meta.xml
<CustomField>
    <fullName>BLM_Outcome__c</fullName>
    <description>FOUK-4786. This field is log the outcomes of an initiative relating to Account Plan initiatives.</description>
    <label>Outcome</label>
    <type>TextArea</type>
</CustomField>