force-app/main/default/objects/BLN_Initiative__c/fields/BLN_AccountName__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountName__c</fullName>
    <description>FOUK-4790.This is the reference field of Account Name.</description>
    <formula>BLN_AccountPlanName__r.BLN_AccountName__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>