force-app/main/default/objects/BLN_Initiative__c/fields/BLN_AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-4790</description>
    <label>Account Plan</label>
    <referenceTo>BLN_AccountPlan__c</referenceTo>
    <relationshipLabel>Initiatives (Account Plan)</relationshipLabel>
    <relationshipName>Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>