force-app/main/default/objects/BLN_Initiative__c/fields/BLN_AccountPlanName__c.field-meta.xml
<CustomField>
    <fullName>BLN_AccountPlanName__c</fullName>
    <description>FOUK-4770. Created for related list</description>
    <label>Account Plan Name</label>
    <referenceTo>BLN_AccountPlan__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>