force-app/main/default/objects/BLN_Initiative__c/fields/BLN_BusinessPriority__c.field-meta.xml
<CustomField>
    <fullName>BLN_BusinessPriority__c</fullName>
    <description>FOUK-4773. This field is the reference of Business Priority.</description>
    <label>Business Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>