force-app/main/default/objects/BLN_Initiative__c/fields/BLN_ClientPriority__c.field-meta.xml
<CustomField>
    <fullName>BLN_ClientPriority__c</fullName>
    <description>FOUK-4774. Created for Client getting priority.</description>
    <label>Client Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>