force-app/main/default/objects/BLN_Initiative__c/fields/BLN_Dependency__c.field-meta.xml
<CustomField>
    <fullName>BLN_Dependency__c</fullName>
    <description>FOUK-4782. This field is the reference for Dependency.</description>
    <label>Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>