force-app/main/default/objects/BLN_Initiative__c/fields/BLN_Duration__c.field-meta.xml
<CustomField>
    <fullName>BLN_Duration__c</fullName>
    <description>( FOUK-4772 ).A count of the number of days between start date and end date</description>
    <formula>ABS( BLN_EndDate__c - BLN_StartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>