force-app/main/default/objects/BLN_Initiative__c/fields/BLN_EndDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_EndDate__c</fullName>
    <description>This is a date field indicated the end date (FOUK-4772)</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>