force-app/main/default/objects/BLN_Initiative__c/fields/BLN_Escalate__c.field-meta.xml
<CustomField>
    <fullName>BLN_Escalate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-5350.This is the reference Field of Escalate.</description>
    <label>Escalate</label>
    <type>Checkbox</type>
</CustomField>