force-app/main/default/objects/BLN_Initiative__c/fields/BLN_EscalateTo__c.field-meta.xml
<CustomField>
    <fullName>BLN_EscalateTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-5350.This is the reference Field of Escalate to.</description>
    <label>Escalate to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>