force-app/main/default/objects/BLN_Initiative__c/fields/BLN_EscalationDetail__c.field-meta.xml
<CustomField>
    <fullName>BLN_EscalationDetail__c</fullName>
    <description>FOUK-5350.This is the refernce field of Escalation Detail.</description>
    <label>Escalation Detail</label>
    <type>TextArea</type>
</CustomField>