force-app/main/default/objects/BLN_Initiative__c/fields/BLN_InitiativeID__c.field-meta.xml
<CustomField>
    <fullName>BLN_InitiativeID__c</fullName>
    <description>FOUK-4770. To collect initiative ID.</description>
    <displayFormat>IN-{00000}</displayFormat>
    <label>Initiative ID</label>
    <type>AutoNumber</type>
</CustomField>