force-app/main/default/objects/BLN_Initiative__c/fields/BLN_ManagerComments__c.field-meta.xml
<CustomField>
    <fullName>BLN_ManagerComments__c</fullName>
    <description>FOUK-5347 Account Audit - Record outcome
Account Manager/Compliance - can enter “Manager Comments” in a Rich Text field in Outcome Section</description>
    <label>Manager Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>