force-app/main/default/objects/BLN_Initiative__c/fields/BLN_Notes__c.field-meta.xml
<CustomField>
    <fullName>BLN_Notes__c</fullName>
    <description>FOUK-5347 Account Audit - Record outcome
Account Manager/Compliance - can enter  “Notes” in a Rich Text field in Outcome Section</description>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>