force-app/main/default/objects/BLN_Initiative__c/fields/BLN_OpenInitiativesthatarepastduedate_c__c.field-meta.xml
<CustomField>
    <fullName>BLN_OpenInitiativesthatarepastduedate_c__c</fullName>
    <description>FOUK-5354.</description>
    <label>Open Initiatives that are past due date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>