force-app/main/default/objects/BLN_Initiative__c/fields/BLN_Progress__c.field-meta.xml
<CustomField>
    <fullName>BLN_Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>