force-app/main/default/objects/BLN_Initiative__c/fields/BLN_SalesStrategy__c.field-meta.xml
<CustomField>
    <fullName>BLN_SalesStrategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-4790.This is the refernce Custom field of Sales Strategy.</description>
    <label>Sales Strategy</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>