force-app/main/default/objects/BLN_Initiative__c/fields/BLN_Severity__c.field-meta.xml
<CustomField>
    <fullName>BLN_Severity__c</fullName>
    <description>FOUK-6533. This is the reference field of  Severity.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>