force-app/main/default/objects/BLN_Initiative__c/fields/BLN_StartDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_StartDate__c</fullName>
    <description>This is a date field indicated the start date (FOUK-4772)</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>