force-app/main/default/objects/BLN_Initiative__c/fields/BLN_Status__c.field-meta.xml
<CustomField>
    <fullName>BLN_Status__c</fullName>
    <description>FOUK-4775. To get Status of the Initiative.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>