force-app/main/default/objects/BLN_Initiative__c/recordTypes/BLN_AccountAuditInitiatives.recordType-meta.xml
<RecordType>
    <fullName>BLN_AccountAuditInitiatives</fullName>
    <active>true</active>
    <label>Account Audit Initiatives</label>
</RecordType>