force-app/main/default/objects/BLN_Initiative__c/recordTypes/BLN_AccountPlanInitiative.recordType-meta.xml
<RecordType>
    <fullName>BLN_AccountPlanInitiative</fullName>
    <active>true</active>
    <label>Account Plan Initiative</label>
</RecordType>