force-app/main/default/objects/BLN_Initiative__c/recordTypes/BLN_SalesStrategyInitiative.recordType-meta.xml
<RecordType>
    <fullName>BLN_SalesStrategyInitiative</fullName>
    <active>false</active>
    <label>Sales Strategy Initiative</label>
</RecordType>