force-app/main/default/objects/BLN_Initiative__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BLN_AccountPlanName__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_StartDate__c</columns>
    <columns>BLN_EndDate__c</columns>
    <columns>BLN_Progress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Initiatives</label>
</ListView>