force-app/main/default/objects/BLN_Initiative__c/listViews/BLN_AccountAuditInitiatives.listView-meta.xml
<ListView>
    <fullName>BLN_AccountAuditInitiatives</fullName>
    <columns>BLN_AccountPlanName__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_Status__c</columns>
    <columns>BLN_StartDate__c</columns>
    <columns>BLN_EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BLN_Initiative__c.BLN_AccountAuditInitiatives</value>
    </filters>
    <label>Account Audit Initiatives</label>
</ListView>