force-app/main/default/objects/BLN_Initiative__c/listViews/BLN_MyInitiative.listView-meta.xml
<ListView>
    <fullName>BLN_MyInitiative</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Initiative</label>
    <sharedTo>
        <role>BLN_CommercialManager</role>
    </sharedTo>
</ListView>