force-app/main/default/objects/BLN_Initiative__c/listViews/BLN_MyInitiatives.listView-meta.xml
<ListView>
    <fullName>BLN_MyInitiatives</fullName>
    <columns>BLN_AccountPlanName__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_Status__c</columns>
    <columns>BLN_StartDate__c</columns>
    <columns>BLN_EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Initiatives</label>
    <sharedTo>
        <role>BLN_CommercialManager</role>
    </sharedTo>
</ListView>