force-app/main/default/objects/BLN_Initiative__c/listViews/BLN_OpenInitiative.listView-meta.xml
<ListView>
    <fullName>BLN_OpenInitiative</fullName>
    <columns>BLN_AccountPlanName__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_Status__c</columns>
    <columns>BLN_StartDate__c</columns>
    <columns>BLN_EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BLN_Status__c</field>
        <operation>equals</operation>
        <value>Planned,In Progress</value>
    </filters>
    <label>Open Initiative</label>
</ListView>