force-app/main/default/objects/BLN_Initiative__c/listViews/BLN_SalesStrategyInitiatives.listView-meta.xml
<ListView>
    <fullName>BLN_SalesStrategyInitiatives</fullName>
    <columns>BLN_AccountName__c</columns>
    <columns>BLN_AccountPlanName__c</columns>
    <columns>NAME</columns>
    <columns>BLN_SalesStrategy__c</columns>
    <columns>BLN_Status__c</columns>
    <columns>BLN_BusinessPriority__c</columns>
    <columns>BLN_ClientPriority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BLN_SalesStrategy__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Sales Strategy Initiatives</label>
</ListView>